syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "BookGrpc";

service BookService {
  rpc CreateBook(BookRequest) returns (BookResponse);
}

message BookRequest {
  string title = 1;
  string author = 2;
  int32 page = 3;
}

message BookResponse {
  string title = 1;
  string author = 2;
  int32 page = 3;
}
